# coding-challenge

logs/: .gitignore  Dockerfile  README.md  alembic.ini  commands.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
logs/alembic/: env.py
logs/alembic/versions/: initial_migration.py
logs/app/: api.py  create_schema.py  log_processor.py  models.py  prepare_db.py
logs/app/tests/: test_log_processor.py
